# marcello

./: .gitignore  FEEDBACK.md  MODEL_CARD.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: classifier.yaml  data.yaml  grpo.yaml
data/: eval_prompts.txt
data/raw/negative_samples/: 01_searching_stars.txt  02_waiting_distance.txt  03_time_management.txt  04_seizing_opportunities.txt  05_importance_of_education.txt  06_purpose_and_meaning.txt  07_overcoming_challenges.txt  08_accepting_mistakes.txt  09_human_freedom.txt  10_future_of_space.txt  11_identity_consciousness.txt  12_inspiration_action.txt  13_genetic_engineering.txt  14_creativity_defined.txt  15_mars_rovers.txt  16_supernova_events.txt  17_learning_methods.txt  18_product_distribution.txt  19_social_software_design.txt  20_ai_productivity.txt  21_choosing_difficulty.txt  22_crisis_and_catastrophe.txt  23_preparing_for_uncertainty.txt
data/raw/writing_samples/: 00_prologo.txt  01_buscando.txt  02_esperandote.txt  03_podrias_quedarte_conmigo.txt  04_el_tiempo.txt  05_oportunidad.txt  06_estudiar_mucho.txt  07_la_educacion.txt  08_nuevo_manana.txt  09_vas_a_intentarlo.txt  10_asumiendo.txt  11_la_libertad_humana.txt  12_sueno_futuro.txt  (+14 more)
notebooks/: marcello_kaggle_pipeline.ipynb
scripts/: collect_data.py  compare_runs.py  evaluate.py  generate.py  push_to_hub.py  train_classifier.py  train_grpo.py
src/marcello/: __init__.py
tests/: test_classifier.py  test_compare_runs.py  test_data.py  test_eval_metrics.py  test_grpo.py  test_prompting.py  test_push_to_hub.py
(+25 files in other folders)
