[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marcello"
version = "0.1.0"
description = "GRPO-based writing style capture - teaching an LLM to write like Marcelo"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Marcelo" },
]

dependencies = [
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "peft>=0.10.0",
    "trl>=0.8.0",
    "accelerate>=0.28.0",
    "wandb>=0.16.0",
    "scikit-learn>=1.4.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3.0",
    "ipykernel>=6.29",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
